--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "it122 demo application",
   "main": "index.js",
-  "devDependencies": {},
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/estaciwo/it122/issues"
   },
-  "homepage": "https://github.com/estaciwo/it122#readme"
+  "homepage": "https://github.com/estaciwo/it122#readme",
+  "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "mongoose": "^8.3.1"
+  }
 }
